syntax = "proto3";
package m2g.pb;

enum SpriteType {
    NO_SPRITE = 0;
    EMPTY = 1;
    GRASS = 2;
    CLIFF_TOP = 3;
    CLIFF_RIGHT = 4;
    CLIFF_BOTTOM = 5;
    CLIFF_LEFT = 6;
    CLIFF_TOP_RIGHT = 7;
    CLIFF_TOP_LEFT = 8;
    CLIFF_BOTTOM_RIGHT = 9;
    CLIFF_BOTTOM_LEFT = 10;
    PLAYER_LOOKDOWN_00 = 11;
    PLAYER_LOOKDOWN_01 = 12;
    PLAYER_LOOKDOWN_02 = 13;
    PLAYER_LOOKLEFT_00 = 14;
    PLAYER_LOOKLEFT_01 = 15;
    PLAYER_LOOKLEFT_02 = 16;
    PLAYER_LOOKRIGHT_00 = 17;
    PLAYER_LOOKRIGHT_01 = 18;
    PLAYER_LOOKRIGHT_02 = 19;
    PLAYER_LOOKUP_00 = 20;
    PLAYER_LOOKUP_01 = 21;
    PLAYER_LOOKUP_02 = 22;
    ENEMY_LOOKDOWN_00 = 23;
    ENEMY_LOOKDOWN_01 = 24;
    ENEMY_LOOKDOWN_02 = 25;
    ENEMY_LOOKLEFT_00 = 26;
    ENEMY_LOOKLEFT_01 = 27;
    ENEMY_LOOKLEFT_02 = 28;
    ENEMY_LOOKRIGHT_00 = 29;
    ENEMY_LOOKRIGHT_01 = 30;
    ENEMY_LOOKRIGHT_02 = 31;
    ENEMY_LOOKUP_00 = 32;
    ENEMY_LOOKUP_01 = 33;
    ENEMY_LOOKUP_02 = 34;
    RED_POTION_00 = 35;
    BULLET_00 = 36;
    BULLET_01 = 37;
    SWORD_00 = 38;
    BOMB_00 = 39;
    FLOPPY_DISK = 40;
    CASTLE_TOP_LEFT_CORNER_TOWER = 41;
    CASTLE_TOP_RIGHT_CORNER_TOWER = 42;
    CASTLE_BOTTOM_LEFT_CORNER_TOWER = 43;
    CASTLE_BOTTOM_RIGHT_CORNER_TOWER = 44;
    CASTLE_TOP_LEFT_CORNER = 45;
    CASTLE_TOP_RIGHT_CORNER = 46;
    CASTLE_TOP_WALL = 47;
    CASTLE_LEFT_WALL = 48;
    CASTLE_RIGHT_WALL = 49;
    CASTLE_BOTTOM_WALL = 50;
    CASTLE_INNER_CORNER_BOTTOM_RIGHT = 51;
    CASTLE_INNER_CORNER_BOTTOM_LEFT = 52;
    CASTLE_INNER_CORNER_TOP_RIGHT = 53;
    CASTLE_INNER_CORNER_TOP_LEFT = 54;
    CASTLE_GROUND = 55;
    CASTLE_FINISH_POINT_SPRITE = 56;
}
